Fixed style for editing on mobiles

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -264,6 +264,7 @@
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
     width: 50%;
     max-width: 500px;
+    min-width: 400px;
 }
 
 .modal-body {
